je m'arrache les cheveux avec le latex

--- a/CompteRendu.tex
+++ b/CompteRendu.tex
@@ -8,7 +8,14 @@
 
 \begin{document}
 
-\section{Rapport du projet d\’Initiation \`{a} la recherche}
+%Page de garde
+\vspace*{100mm}
+\begin{center}
+	{\Huge Rapport du projet d'initiation \`{a} la recherche}
+\end{center}
+\cleardoublepage
+
+
 sujet : Constitution d’une base de cas de corrections du fran\c{c}ais
 
 \section{D\'echarge de responsabilit\'e}
