--- a/rapport/CompteRendu.tex
+++ b/rapport/CompteRendu.tex
@@ -10,15 +10,24 @@
 \begin{document}
 
 %Page de garde
-\vspace*{100mm}
 \begin{center}
-	{\Huge Rapport du projet d'initiation \`{a} la recherche}
+\includegraphics[width=10cm]{logoULFST.jpg} %l'image est retaillée pour avoir une largeur de 10cm
+\end{center}
+
+\begin{center}
+{\bfseries \large Master Informatique}
+\end{center}
+
+\vspace*{70mm}
+\begin{center}
+	{\bfseries \Huge Rapport du projet d'initiation \`{a} la recherche}
+\end{center}
+\vspace*{10mm}
+\begin{center}
+{\large sujet : Constitution d'une base de cas de corrections du fran\c{c}ais}
 \end{center}
 \begin{center}
-sujet : Constitution d’une base de cas de corrections du fran\c{c}ais
-\end{center}
-\begin{center}
-Ann\'ee 2018-2019
+{\large Ann\'ee 2018-2019}
 \end{center}
 \cleardoublepage
 
