page de garde presque finie

--- a/rapport/CompteRendu.tex
+++ b/rapport/CompteRendu.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 
 \usepackage{graphicx}
+\usepackage{multicol}
 \usepackage[latin1]{inputenc} % package caracteres francais
 \usepackage[T1]{fontenc}      % package caracteres francai
 \usepackage[francais]{babel}  % package caracteres francai
@@ -29,6 +30,34 @@
 \begin{center}
 {\large Ann\'ee 2018-2019}
 \end{center}
+
+
+
+\vspace*{40mm}
+\begin{multicols}{2}
+\begin{multicols}{2}
+	\begin{flushright}
+		\`{E}tudiants :
+	\end{flushright}
+		\vfill\null\columnbreak
+	\begin{flushleft}
+		Alex Ginestra\newline Christopher Klein
+	\end{flushleft}
+\end{multicols}
+\vfill\null\columnbreak
+\begin{multicols}{2}
+	\begin{flushright}
+		\`{E}quipe :
+	\end{flushright}
+	\begin{flushright}
+		Encadrants :
+	\end{flushright}
+	\vfill\null\columnbreak
+	\begin{flushleft}
+	Orpailleur et S\`{e}magramme\newline Bruno Guillaume, Yves Lepage, Jean Lieber et Emmanuel Nauer
+	\end{flushleft}
+\end{multicols}
+\end{multicols}
 \cleardoublepage
 
 
