suppression fichier inutile

--- a/rapport/CompteRendu.tex
+++ b/rapport/CompteRendu.tex
@@ -10,7 +10,8 @@
 
 \begin{document}
 
-%Page de garde
+
+%======Page de garde=======
 \begin{center}
 \includegraphics[width=10cm]{logoULFST.jpg} %l'image est retaillée pour avoir une largeur de 10cm
 \end{center}
@@ -62,7 +63,7 @@
 \cleardoublepage
 
 
-
+%=====Page suivante=====
 \section{D\'echarge de responsabilit\'e}
 
 \section{Remerciements}
