ajout de la charge de non plagiat

--- a/rapport/CompteRendu.tex
+++ b/rapport/CompteRendu.tex
@@ -35,7 +35,7 @@
 
 
 
-\vspace*{40mm}
+\vspace*{60mm}
 \begin{multicols}{2}
 \begin{multicols}{2}
 	\begin{flushright}
@@ -56,15 +56,22 @@
 	\end{flushright}
 	\vfill\null\columnbreak
 	\begin{flushleft}
-	Orpailleur et S\`{e}magramme\newline Bruno Guillaume, Yves Lepage, Jean Lieber et Emmanuel Nauer
+	Orpailleur et S\'emagramme\newline Bruno Guillaume, Yves Lepage, Jean Lieber et Emmanuel Nauer
 	\end{flushleft}
 \end{multicols}
 \end{multicols}
 \cleardoublepage
+\cleardoublepage
 
 
 %=====Page suivante=====
-\section{D\'echarge de responsabilit\'e}
+\begin{center}
+{\bfseries \huge D\'echarge de responsabilit\'e}
+\end{center}
+Nous soussignons Alex Ginestra et Christopher Klein, d\'eclarons avoir pris connaissance de la charte des examens et notamment du paragraphe sp\'ecifique au plagiat.\newline
+Je suis pleinement conscient(e) que la copie int\'egrale sans citation ni r\'ef\'erence de documents ou d'une partie de document publi\'es sous quelques formes que ce soit (ouvrages, publications, rapports d'\'etudiant, internet etc...) est un plagiat et constitue une violation des droits d'auteur ainsi qu'une fraude caract\'eris\'ee.\newline
+En cons\'equence, je m'engage \`{a} citer toutes les sources que j'ai utilis\'ees pour produire et \'ecrire ce document.
+\cleardoublepage
 
 \section{Remerciements}
 
