--- a/rapport/CompteRendu.tex
+++ b/rapport/CompteRendu.tex
@@ -13,7 +13,7 @@
 
 %======Page de garde=======
 \begin{center}
-\includegraphics[width=10cm]{logoULFST.jpg} %l'image est retaillée pour avoir une largeur de 10cm
+\includegraphics[width=10cm]{logoULFST.jpg} %l'image est retaill\'ee pour avoir une largeur de 10cm
 \end{center}
 
 \begin{center}
@@ -64,19 +64,65 @@
 \cleardoublepage
 
 
-%=====Page suivante=====
+%=====Page declaration contre le plagiat=====
+\thispagestyle{empty}
 \begin{center}
 {\bfseries \huge D\'echarge de responsabilit\'e}
 \end{center}
+\vspace*{10mm}
+
 Nous soussignons Alex Ginestra et Christopher Klein, d\'eclarons avoir pris connaissance de la charte des examens et notamment du paragraphe sp\'ecifique au plagiat.\newline
 Je suis pleinement conscient(e) que la copie int\'egrale sans citation ni r\'ef\'erence de documents ou d'une partie de document publi\'es sous quelques formes que ce soit (ouvrages, publications, rapports d'\'etudiant, internet etc...) est un plagiat et constitue une violation des droits d'auteur ainsi qu'une fraude caract\'eris\'ee.\newline
 En cons\'equence, je m'engage \`{a} citer toutes les sources que j'ai utilis\'ees pour produire et \'ecrire ce document.
 \cleardoublepage
 
-\section{Remerciements}
 
+%=====Page remerciements=====
+\thispagestyle{empty}
+\begin{center}
+{\bfseries \huge Remerciements}
+\end{center}
+\vspace*{10mm}
+
+Tout d'abord, nous tenons \`{a} remercier toute l'\'equipe p\'edagogique du d\'epartement informatique de la facult\'e des sciences et technologies pour les quatre ann\'ees de formation en Master informatique.\newline
+J'adresse \'egalement mes remerciements \`{a} toute l'\'equipe Orpailleur et S\'emagramme ainsi qu'aux encadrants Bruno Guillaume, Yves Lepage, Jean Lieber et Emmanuel Nauer pour leur accueil et leur sympathie.
+
+\cleardoublepage
+
+
+%======Sommaire====== 
 \section{Sommaire}
+\setcounter{page}{3}
 
+\cleardoublepage
+
+%=====Rappel du sujet====
+\begin{center}
+{\bfseries \huge Rappel du sujet}
+\end{center}
+
+\vspace*{10mm}
+
+
+{\bfseries Probl\'ematique de recherche : }
+\newline
+Le raisonnement \`{a} partir de cas (R\`{a}PC) est un raisonnement hypoth\'etique (en g\'en\'eral) qui consiste \`{a} r\'esoudre un nouveau probl\`{e}me (le probl\`{e}me cible, not\'e cible) en s'appuyant sur une base de cas, un cas \'etant la repr\'esentation d'un \'episode de r\'esolution de probl\`{e}me. On appelle cas source un \'el\'ement de la base de cas. Souvent, on repr\'esente un cas source simplement par un couple (srce, sol(srce)) : srce est un probl\`{e}me source, sol(srce) est une solution de ce probl\`{e}me source. Un mod\`{e}le du processus de R\`{a}PC classique comprend deux \'etapes d'inf\'erence : 
+Rem\'emoration : un cas source (srce, sol(srce)) jug\'e similaire au probl\`{e}me cible (par exemple, sur la base d'une distance entre probl\`{e}mes) est s\'electionn\'e. 
+Adaptation : La solution sol(srce) de ce cas est modifi\'ee en une solution candidate sol(cible) de cible. 
+
+La correction de phrases est la probl\'ematique de la transformation d'une phrase incorrecte (en particulier, grammaticalement) en une phrase corrig\'ee (nous choisirons la langue française dans ce travail, m\^eme si la probl\'ematique existe dans toutes les langues). Un cas de correction de phrase est donc un couple (srce, sol(srce)) o\`{u} srce est une phrase incorrecte et sol(srce) une correction de srce. Par exemple, on a les deux cas : 
+srce1 = Tu as pas mang\'e. sol(srce1) = Tu n'as pas mang\'e. 
+srce2 = Il a recommencer. sol(srce2) = Il a recommenc\'e. 
+L'adaptation se fait par des techniques de raisonnement par analogie : la solution sol(cible) est solution d'une \'equation analogique « srce est \`{a} sol(srce) ce que cible est \`{a} y ». Par exemple, l'adaptation de (srce2, sol(srce2)) \`{a} cible = Tu as manger. consiste \`{a} r\'esoudre Il a recommencer. est \`{a} Il a recommenc\'e. ce que Tu as manger. est \`{a} x qui a pour solution, avec la relation d'analogie utilis\'ee dans le projet, x = Tu as mang\'e., proposition de solution propos\'ee par le syst\`{e}me. 
+Sujet : 
+Comme pour tout syst\`{e}me \`{a} base de connaissances, la qualit\'e d'un syst\`{e}me de R\`{a}PC d\'epend de celle de son moteur d'inf\'erences mais \'egalement de la qualit\'e de sa base de connaissances, en particulier de sa base de cas. Une bonne base de cas doit avoir plusieurs qualit\'es. Les cas sources doivent être corrects. Elle doit avoir une bonne couverture (et permettre de r\'esoudre correctement une proportion importante de cas). Elle devrait ne pas être trop redondante (certains cas diff\'erents correspondent \`{a} la même correction). 
+Pour cela, on pourra consulter les mouchards d'\'edition de Wikip\'edia pour en extraire des listes de fautes grammaticales ou orthographiques typiques, ainsi que des sites de dict\'ees ou d'orthographe. Il faudra mettre en place les outils de collecte automatiques, param\'etrables en fonction des sites. 
+Une autre piste est la mise en place d'un jeu interactif avec un but. Le but est de faire corriger des phrases fautives par les joueurs. La phrase corrig\'ee devrait \'emerger de la majorit\'e des propositions de correction. Les phrases fautives pourraient être extraites de listes d'exemples fautifs, ou produites automatiquement \`{a} partir de patrons pr\'ed\'efinis ou par application de l'analogie sur des cas d\'ej\`{a} collect\'es.
+Une courte \'etude bibliographique sur la maintenance de base de cas permettra de sugg\'erer des pistes pour l'acquisition d'une bonne base de cas. Il faudra mettre en place une m\'ethode pour cela, qui pourra s'appuyer sur les sites mentionn\'es ci-dessus.
+
+
+
+%===== Introduction ====
 Bonjour, je lis actuellement un cours traitant de LaTeX !
 \end{document}
 
